shreppl/shreppl-hs/ParShre.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParShre.y
-----------------------------------------------------------------------------

state 19 contains 6 shift/reduce conflicts.
state 20 contains 6 shift/reduce conflicts.
state 33 contains 1 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 63 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListFunction -> ListFunction               (1)
	%start_pFunction -> Function                       (2)
	%start_pListFuncArgDecl -> ListFuncArgDecl         (3)
	%start_pFuncArgDecl -> FuncArgDecl                 (4)
	%start_pStructSelector -> StructSelector           (5)
	%start_pSelector -> Selector                       (6)
	%start_pListLetIn -> ListLetIn                     (7)
	%start_pLetIn -> LetIn                             (8)
	%start_pExpr -> Expr                               (9)
	%start_pFuncCall -> FuncCall                       (10)
	%start_pFuncCallArgList -> FuncCallArgList         (11)
	Ident -> L_Ident                                   (12)
	Double -> L_doubl                                  (13)
	Integer -> L_integ                                 (14)
	String -> L_quoted                                 (15)
	Program -> ListFunction                            (16)
	ListFunction ->                                    (17)
	ListFunction -> Function                           (18)
	ListFunction -> Function ';' ListFunction          (19)
	Function -> Ident ListFuncArgDecl '->' ListFuncArgDecl ':' ListLetIn   (20)
	Function -> Ident ListFuncArgDecl ':' ListLetIn    (21)
	ListFuncArgDecl ->                                 (22)
	ListFuncArgDecl -> FuncArgDecl ListFuncArgDecl     (23)
	FuncArgDecl -> Ident                               (24)
	StructSelector -> Ident                            (25)
	StructSelector -> StructSelector '.' Ident         (26)
	Selector -> StructSelector                         (27)
	Selector -> Ident ':' StructSelector               (28)
	ListLetIn ->                                       (29)
	ListLetIn -> LetIn                                 (30)
	ListLetIn -> LetIn ';' ListLetIn                   (31)
	LetIn -> Selector '=' Expr                         (32)
	LetIn -> Expr                                      (33)
	Expr -> Integer                                    (34)
	Expr -> Double                                     (35)
	Expr -> String                                     (36)
	Expr -> FuncCall                                   (37)
	Expr -> '(' Expr ')'                               (38)
	Expr -> Expr '|' Expr                              (39)
	FuncCall -> Selector FuncCallArgList '#'           (40)
	FuncCall -> Selector FuncCallArgList               (41)
	FuncCall -> Selector '#'                           (42)
	FuncCall -> Selector                               (43)
	FuncCallArgList -> Expr FuncCallArgList            (44)
	FuncCallArgList -> Expr                            (45)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#'            { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'->'           { PT _ (TS _ 4) }
	'.'            { PT _ (TS _ 5) }
	':'            { PT _ (TS _ 6) }
	';'            { PT _ (TS _ 7) }
	'='            { PT _ (TS _ 8) }
	'|'            { PT _ (TS _ 9) }
	L_Ident        { PT _ (TV $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListFunction rule  1
	%start_pFunction rule  2
	%start_pListFuncArgDecl rule  3
	%start_pFuncArgDecl rule  4
	%start_pStructSelector rule  5
	%start_pSelector rule  6
	%start_pListLetIn rule  7
	%start_pLetIn   rule  8
	%start_pExpr    rule  9
	%start_pFuncCall rule  10
	%start_pFuncCallArgList rule  11
	Ident           rule  12
	Double          rule  13
	Integer         rule  14
	String          rule  15
	Program         rule  16
	ListFunction    rules 17, 18, 19
	Function        rules 20, 21
	ListFuncArgDecl rules 22, 23
	FuncArgDecl     rule  24
	StructSelector  rules 25, 26
	Selector        rules 27, 28
	ListLetIn       rules 29, 30, 31
	LetIn           rules 32, 33
	Expr            rules 34, 35, 36, 37, 38, 39
	FuncCall        rules 40, 41, 42, 43
	FuncCallArgList rules 44, 45

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	L_Ident        shift, and enter state 13
	%eof           reduce using rule 17

	Ident          goto state 41
	Program        goto state 45
	ListFunction   goto state 46
	Function       goto state 44

State 1

	%start_pListFunction -> . ListFunction              (rule 1)

	L_Ident        shift, and enter state 13
	%eof           reduce using rule 17

	Ident          goto state 41
	ListFunction   goto state 43
	Function       goto state 44

State 2

	%start_pFunction -> . Function                      (rule 2)

	L_Ident        shift, and enter state 13

	Ident          goto state 41
	Function       goto state 42

State 3

	%start_pListFuncArgDecl -> . ListFuncArgDecl        (rule 3)

	L_Ident        shift, and enter state 13
	%eof           reduce using rule 22

	Ident          goto state 37
	ListFuncArgDeclgoto state 39
	FuncArgDecl    goto state 40

State 4

	%start_pFuncArgDecl -> . FuncArgDecl                (rule 4)

	L_Ident        shift, and enter state 13

	Ident          goto state 37
	FuncArgDecl    goto state 38

State 5

	%start_pStructSelector -> . StructSelector          (rule 5)

	L_Ident        shift, and enter state 13

	Ident          goto state 35
	StructSelector goto state 36

State 6

	%start_pSelector -> . Selector                      (rule 6)

	L_Ident        shift, and enter state 13

	Ident          goto state 14
	StructSelector goto state 18
	Selector       goto state 34

State 7

	%start_pListLetIn -> . ListLetIn                    (rule 7)

	'('            shift, and enter state 23
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26
	%eof           reduce using rule 29

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 29
	ListLetIn      goto state 32
	LetIn          goto state 33
	Expr           goto state 31
	FuncCall       goto state 21

State 8

	%start_pLetIn -> . LetIn                            (rule 8)

	'('            shift, and enter state 23
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 29
	LetIn          goto state 30
	Expr           goto state 31
	FuncCall       goto state 21

State 9

	%start_pExpr -> . Expr                              (rule 9)

	'('            shift, and enter state 23
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 28
	FuncCall       goto state 21

State 10

	%start_pFuncCall -> . FuncCall                      (rule 10)

	L_Ident        shift, and enter state 13

	Ident          goto state 14
	StructSelector goto state 18
	Selector       goto state 19
	FuncCall       goto state 27

State 11

	%start_pFuncCallArgList -> . FuncCallArgList        (rule 11)

	'('            shift, and enter state 23
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 20
	FuncCall       goto state 21
	FuncCallArgListgoto state 22

State 12

	Ident -> . L_Ident                                  (rule 12)

	L_Ident        shift, and enter state 13


State 13

	Ident -> L_Ident .                                  (rule 12)

	'#'            reduce using rule 12
	'('            reduce using rule 12
	')'            reduce using rule 12
	'->'           reduce using rule 12
	'.'            reduce using rule 12
	':'            reduce using rule 12
	';'            reduce using rule 12
	'='            reduce using rule 12
	'|'            reduce using rule 12
	L_Ident        reduce using rule 12
	L_doubl        reduce using rule 12
	L_integ        reduce using rule 12
	L_quoted       reduce using rule 12
	%eof           reduce using rule 12


State 14

	StructSelector -> Ident .                           (rule 25)
	Selector -> Ident . ':' StructSelector              (rule 28)

	'#'            reduce using rule 25
	'('            reduce using rule 25
	')'            reduce using rule 25
	'.'            reduce using rule 25
	':'            shift, and enter state 58
	';'            reduce using rule 25
	'='            reduce using rule 25
	'|'            reduce using rule 25
	L_Ident        reduce using rule 25
	L_doubl        reduce using rule 25
	L_integ        reduce using rule 25
	L_quoted       reduce using rule 25
	%eof           reduce using rule 25


State 15

	Expr -> Double .                                    (rule 35)

	'#'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	';'            reduce using rule 35
	'|'            reduce using rule 35
	L_Ident        reduce using rule 35
	L_doubl        reduce using rule 35
	L_integ        reduce using rule 35
	L_quoted       reduce using rule 35
	%eof           reduce using rule 35


State 16

	Expr -> Integer .                                   (rule 34)

	'#'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	';'            reduce using rule 34
	'|'            reduce using rule 34
	L_Ident        reduce using rule 34
	L_doubl        reduce using rule 34
	L_integ        reduce using rule 34
	L_quoted       reduce using rule 34
	%eof           reduce using rule 34


State 17

	Expr -> String .                                    (rule 36)

	'#'            reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	';'            reduce using rule 36
	'|'            reduce using rule 36
	L_Ident        reduce using rule 36
	L_doubl        reduce using rule 36
	L_integ        reduce using rule 36
	L_quoted       reduce using rule 36
	%eof           reduce using rule 36


State 18

	StructSelector -> StructSelector . '.' Ident        (rule 26)
	Selector -> StructSelector .                        (rule 27)

	'#'            reduce using rule 27
	'('            reduce using rule 27
	')'            reduce using rule 27
	'.'            shift, and enter state 50
	';'            reduce using rule 27
	'='            reduce using rule 27
	'|'            reduce using rule 27
	L_Ident        reduce using rule 27
	L_doubl        reduce using rule 27
	L_integ        reduce using rule 27
	L_quoted       reduce using rule 27
	%eof           reduce using rule 27


State 19

	FuncCall -> Selector . FuncCallArgList '#'          (rule 40)
	FuncCall -> Selector . FuncCallArgList              (rule 41)
	FuncCall -> Selector . '#'                          (rule 42)
	FuncCall -> Selector .                              (rule 43)

	'#'            shift, and enter state 54
			(reduce using rule 43)

	'('            shift, and enter state 23
			(reduce using rule 43)

	')'            reduce using rule 43
	';'            reduce using rule 43
	'|'            reduce using rule 43
	L_Ident        shift, and enter state 13
			(reduce using rule 43)

	L_doubl        shift, and enter state 24
			(reduce using rule 43)

	L_integ        shift, and enter state 25
			(reduce using rule 43)

	L_quoted       shift, and enter state 26
			(reduce using rule 43)

	%eof           reduce using rule 43

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 20
	FuncCall       goto state 21
	FuncCallArgListgoto state 53

State 20

	Expr -> Expr . '|' Expr                             (rule 39)
	FuncCallArgList -> Expr . FuncCallArgList           (rule 44)
	FuncCallArgList -> Expr .                           (rule 45)

	'#'            reduce using rule 45
	'('            shift, and enter state 23
			(reduce using rule 45)

	')'            reduce using rule 45
	';'            reduce using rule 45
	'|'            shift, and enter state 52
			(reduce using rule 45)

	L_Ident        shift, and enter state 13
			(reduce using rule 45)

	L_doubl        shift, and enter state 24
			(reduce using rule 45)

	L_integ        shift, and enter state 25
			(reduce using rule 45)

	L_quoted       shift, and enter state 26
			(reduce using rule 45)

	%eof           reduce using rule 45

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 20
	FuncCall       goto state 21
	FuncCallArgListgoto state 57

State 21

	Expr -> FuncCall .                                  (rule 37)

	'#'            reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	';'            reduce using rule 37
	'|'            reduce using rule 37
	L_Ident        reduce using rule 37
	L_doubl        reduce using rule 37
	L_integ        reduce using rule 37
	L_quoted       reduce using rule 37
	%eof           reduce using rule 37


State 22

	%start_pFuncCallArgList -> FuncCallArgList .        (rule 11)

	%eof           accept


State 23

	Expr -> '(' . Expr ')'                              (rule 38)

	'('            shift, and enter state 23
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 56
	FuncCall       goto state 21

State 24

	Double -> L_doubl .                                 (rule 13)

	'#'            reduce using rule 13
	'('            reduce using rule 13
	')'            reduce using rule 13
	';'            reduce using rule 13
	'|'            reduce using rule 13
	L_Ident        reduce using rule 13
	L_doubl        reduce using rule 13
	L_integ        reduce using rule 13
	L_quoted       reduce using rule 13
	%eof           reduce using rule 13


State 25

	Integer -> L_integ .                                (rule 14)

	'#'            reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	';'            reduce using rule 14
	'|'            reduce using rule 14
	L_Ident        reduce using rule 14
	L_doubl        reduce using rule 14
	L_integ        reduce using rule 14
	L_quoted       reduce using rule 14
	%eof           reduce using rule 14


State 26

	String -> L_quoted .                                (rule 15)

	'#'            reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	';'            reduce using rule 15
	'|'            reduce using rule 15
	L_Ident        reduce using rule 15
	L_doubl        reduce using rule 15
	L_integ        reduce using rule 15
	L_quoted       reduce using rule 15
	%eof           reduce using rule 15


State 27

	%start_pFuncCall -> FuncCall .                      (rule 10)

	%eof           accept


State 28

	%start_pExpr -> Expr .                              (rule 9)
	Expr -> Expr . '|' Expr                             (rule 39)

	'|'            shift, and enter state 52
	%eof           accept


State 29

	LetIn -> Selector . '=' Expr                        (rule 32)
	FuncCall -> Selector . FuncCallArgList '#'          (rule 40)
	FuncCall -> Selector . FuncCallArgList              (rule 41)
	FuncCall -> Selector . '#'                          (rule 42)
	FuncCall -> Selector .                              (rule 43)

	'#'            shift, and enter state 54
	'('            shift, and enter state 23
	';'            reduce using rule 43
	'='            shift, and enter state 55
	'|'            reduce using rule 43
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26
	%eof           reduce using rule 43

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 20
	FuncCall       goto state 21
	FuncCallArgListgoto state 53

State 30

	%start_pLetIn -> LetIn .                            (rule 8)

	%eof           accept


State 31

	LetIn -> Expr .                                     (rule 33)
	Expr -> Expr . '|' Expr                             (rule 39)

	';'            reduce using rule 33
	'|'            shift, and enter state 52
	%eof           reduce using rule 33


State 32

	%start_pListLetIn -> ListLetIn .                    (rule 7)

	%eof           accept


State 33

	ListLetIn -> LetIn .                                (rule 30)
	ListLetIn -> LetIn . ';' ListLetIn                  (rule 31)

	';'            shift, and enter state 51
			(reduce using rule 30)

	%eof           reduce using rule 30


State 34

	%start_pSelector -> Selector .                      (rule 6)

	%eof           accept


State 35

	StructSelector -> Ident .                           (rule 25)

	'#'            reduce using rule 25
	'('            reduce using rule 25
	')'            reduce using rule 25
	'.'            reduce using rule 25
	';'            reduce using rule 25
	'='            reduce using rule 25
	'|'            reduce using rule 25
	L_Ident        reduce using rule 25
	L_doubl        reduce using rule 25
	L_integ        reduce using rule 25
	L_quoted       reduce using rule 25
	%eof           reduce using rule 25


State 36

	%start_pStructSelector -> StructSelector .          (rule 5)
	StructSelector -> StructSelector . '.' Ident        (rule 26)

	'.'            shift, and enter state 50
	%eof           accept


State 37

	FuncArgDecl -> Ident .                              (rule 24)

	'->'           reduce using rule 24
	':'            reduce using rule 24
	L_Ident        reduce using rule 24
	%eof           reduce using rule 24


State 38

	%start_pFuncArgDecl -> FuncArgDecl .                (rule 4)

	%eof           accept


State 39

	%start_pListFuncArgDecl -> ListFuncArgDecl .        (rule 3)

	%eof           accept


State 40

	ListFuncArgDecl -> FuncArgDecl . ListFuncArgDecl    (rule 23)

	'->'           reduce using rule 22
	':'            reduce using rule 22
	L_Ident        shift, and enter state 13
	%eof           reduce using rule 22

	Ident          goto state 37
	ListFuncArgDeclgoto state 49
	FuncArgDecl    goto state 40

State 41

	Function -> Ident . ListFuncArgDecl '->' ListFuncArgDecl ':' ListLetIn    (rule 20)
	Function -> Ident . ListFuncArgDecl ':' ListLetIn    (rule 21)

	'->'           reduce using rule 22
	':'            reduce using rule 22
	L_Ident        shift, and enter state 13

	Ident          goto state 37
	ListFuncArgDeclgoto state 48
	FuncArgDecl    goto state 40

State 42

	%start_pFunction -> Function .                      (rule 2)

	%eof           accept


State 43

	%start_pListFunction -> ListFunction .              (rule 1)

	%eof           accept


State 44

	ListFunction -> Function .                          (rule 18)
	ListFunction -> Function . ';' ListFunction         (rule 19)

	';'            shift, and enter state 47
	%eof           reduce using rule 18


State 45

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 46

	Program -> ListFunction .                           (rule 16)

	%eof           reduce using rule 16


State 47

	ListFunction -> Function ';' . ListFunction         (rule 19)

	L_Ident        shift, and enter state 13
	%eof           reduce using rule 17

	Ident          goto state 41
	ListFunction   goto state 68
	Function       goto state 44

State 48

	Function -> Ident ListFuncArgDecl . '->' ListFuncArgDecl ':' ListLetIn    (rule 20)
	Function -> Ident ListFuncArgDecl . ':' ListLetIn    (rule 21)

	'->'           shift, and enter state 66
	':'            shift, and enter state 67


State 49

	ListFuncArgDecl -> FuncArgDecl ListFuncArgDecl .    (rule 23)

	'->'           reduce using rule 23
	':'            reduce using rule 23
	%eof           reduce using rule 23


State 50

	StructSelector -> StructSelector '.' . Ident        (rule 26)

	L_Ident        shift, and enter state 13

	Ident          goto state 65

State 51

	ListLetIn -> LetIn ';' . ListLetIn                  (rule 31)

	'('            shift, and enter state 23
	';'            reduce using rule 29
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26
	%eof           reduce using rule 29

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 29
	ListLetIn      goto state 64
	LetIn          goto state 33
	Expr           goto state 31
	FuncCall       goto state 21

State 52

	Expr -> Expr '|' . Expr                             (rule 39)

	'('            shift, and enter state 23
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 63
	FuncCall       goto state 21

State 53

	FuncCall -> Selector FuncCallArgList . '#'          (rule 40)
	FuncCall -> Selector FuncCallArgList .              (rule 41)

	'#'            shift, and enter state 62
			(reduce using rule 41)

	'('            reduce using rule 41
	')'            reduce using rule 41
	';'            reduce using rule 41
	'|'            reduce using rule 41
	L_Ident        reduce using rule 41
	L_doubl        reduce using rule 41
	L_integ        reduce using rule 41
	L_quoted       reduce using rule 41
	%eof           reduce using rule 41


State 54

	FuncCall -> Selector '#' .                          (rule 42)

	'#'            reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	';'            reduce using rule 42
	'|'            reduce using rule 42
	L_Ident        reduce using rule 42
	L_doubl        reduce using rule 42
	L_integ        reduce using rule 42
	L_quoted       reduce using rule 42
	%eof           reduce using rule 42


State 55

	LetIn -> Selector '=' . Expr                        (rule 32)

	'('            shift, and enter state 23
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 19
	Expr           goto state 61
	FuncCall       goto state 21

State 56

	Expr -> '(' Expr . ')'                              (rule 38)
	Expr -> Expr . '|' Expr                             (rule 39)

	')'            shift, and enter state 60
	'|'            shift, and enter state 52


State 57

	FuncCallArgList -> Expr FuncCallArgList .           (rule 44)

	'#'            reduce using rule 44
	'('            reduce using rule 44
	')'            reduce using rule 44
	';'            reduce using rule 44
	'|'            reduce using rule 44
	L_Ident        reduce using rule 44
	L_doubl        reduce using rule 44
	L_integ        reduce using rule 44
	L_quoted       reduce using rule 44
	%eof           reduce using rule 44


State 58

	Selector -> Ident ':' . StructSelector              (rule 28)

	L_Ident        shift, and enter state 13

	Ident          goto state 35
	StructSelector goto state 59

State 59

	StructSelector -> StructSelector . '.' Ident        (rule 26)
	Selector -> Ident ':' StructSelector .              (rule 28)

	'#'            reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'.'            shift, and enter state 50
	';'            reduce using rule 28
	'='            reduce using rule 28
	'|'            reduce using rule 28
	L_Ident        reduce using rule 28
	L_doubl        reduce using rule 28
	L_integ        reduce using rule 28
	L_quoted       reduce using rule 28
	%eof           reduce using rule 28


State 60

	Expr -> '(' Expr ')' .                              (rule 38)

	'#'            reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	';'            reduce using rule 38
	'|'            reduce using rule 38
	L_Ident        reduce using rule 38
	L_doubl        reduce using rule 38
	L_integ        reduce using rule 38
	L_quoted       reduce using rule 38
	%eof           reduce using rule 38


State 61

	LetIn -> Selector '=' Expr .                        (rule 32)
	Expr -> Expr . '|' Expr                             (rule 39)

	';'            reduce using rule 32
	'|'            shift, and enter state 52
	%eof           reduce using rule 32


State 62

	FuncCall -> Selector FuncCallArgList '#' .          (rule 40)

	'#'            reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	';'            reduce using rule 40
	'|'            reduce using rule 40
	L_Ident        reduce using rule 40
	L_doubl        reduce using rule 40
	L_integ        reduce using rule 40
	L_quoted       reduce using rule 40
	%eof           reduce using rule 40


State 63

	Expr -> Expr . '|' Expr                             (rule 39)
	Expr -> Expr '|' Expr .                             (rule 39)

	'#'            reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	';'            reduce using rule 39
	'|'            shift, and enter state 52
			(reduce using rule 39)

	L_Ident        reduce using rule 39
	L_doubl        reduce using rule 39
	L_integ        reduce using rule 39
	L_quoted       reduce using rule 39
	%eof           reduce using rule 39


State 64

	ListLetIn -> LetIn ';' ListLetIn .                  (rule 31)

	';'            reduce using rule 31
	%eof           reduce using rule 31


State 65

	StructSelector -> StructSelector '.' Ident .        (rule 26)

	'#'            reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	'.'            reduce using rule 26
	';'            reduce using rule 26
	'='            reduce using rule 26
	'|'            reduce using rule 26
	L_Ident        reduce using rule 26
	L_doubl        reduce using rule 26
	L_integ        reduce using rule 26
	L_quoted       reduce using rule 26
	%eof           reduce using rule 26


State 66

	Function -> Ident ListFuncArgDecl '->' . ListFuncArgDecl ':' ListLetIn    (rule 20)

	':'            reduce using rule 22
	L_Ident        shift, and enter state 13

	Ident          goto state 37
	ListFuncArgDeclgoto state 70
	FuncArgDecl    goto state 40

State 67

	Function -> Ident ListFuncArgDecl ':' . ListLetIn    (rule 21)

	'('            shift, and enter state 23
	';'            reduce using rule 29
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26
	%eof           reduce using rule 29

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 29
	ListLetIn      goto state 69
	LetIn          goto state 33
	Expr           goto state 31
	FuncCall       goto state 21

State 68

	ListFunction -> Function ';' ListFunction .         (rule 19)

	%eof           reduce using rule 19


State 69

	Function -> Ident ListFuncArgDecl ':' ListLetIn .    (rule 21)

	';'            reduce using rule 21
	%eof           reduce using rule 21


State 70

	Function -> Ident ListFuncArgDecl '->' ListFuncArgDecl . ':' ListLetIn    (rule 20)

	':'            shift, and enter state 71


State 71

	Function -> Ident ListFuncArgDecl '->' ListFuncArgDecl ':' . ListLetIn    (rule 20)

	'('            shift, and enter state 23
	';'            reduce using rule 29
	L_Ident        shift, and enter state 13
	L_doubl        shift, and enter state 24
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26
	%eof           reduce using rule 29

	Ident          goto state 14
	Double         goto state 15
	Integer        goto state 16
	String         goto state 17
	StructSelector goto state 18
	Selector       goto state 29
	ListLetIn      goto state 72
	LetIn          goto state 33
	Expr           goto state 31
	FuncCall       goto state 21

State 72

	Function -> Ident ListFuncArgDecl '->' ListFuncArgDecl ':' ListLetIn .    (rule 20)

	';'            reduce using rule 20
	%eof           reduce using rule 20


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 46
Number of terminals: 13
Number of non-terminals: 28
Number of states: 73
